--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: <todo>
+        image: image: us-west1-docker.pkg.dev/qwiklabs-gcp-04-95f5b40e7587/my-repository/hello-cloudbuild:v2.0
         ports:
         - containerPort: 8080
